#8 added class name to li tag in bullet mixin

--- a/src/blocks/bullet/bullet.pug
+++ b/src/blocks/bullet/bullet.pug
@@ -1,5 +1,5 @@
 mixin bullet(listItems)
   ul.bullet
     each item in listItems
-      li
+      li.bullet__element
         span.bullet__item= item
