#10 change selector by tag to selector by classname

--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -9,7 +9,7 @@
   margin-inline-end: 0;
   list-style-position: inside;
 
-  & li {
+  &__element {
     position: relative;
     padding-left: 19px;
     padding-bottom: 14px;
