--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -24,6 +24,20 @@
     }
   }
 
+  &__statistic-container {
+    display: flex;
+  }
+
+  &__donut {
+    margin-right: 16px;
+    min-width: 150px;
+  }
+
+  &__list {
+    align-self: flex-end;
+    padding-bottom: 10px;
+  }
+
   &__room-item {
     max-width: 280px;
 
