--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -68,6 +68,8 @@
     display: block;
     margin: 20px 0;
     line-height: 1.0625rem;
+    text-decoration: none;
+    color: $dark-shade-50;
   }
 
   &__line {
