--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -35,8 +35,8 @@ body {
 }
 
 a {
-  text-decoration: none;
-  color: $dark-shade-50;
+  //text-decoration: none;
+  //color: $dark-shade-50;
 }
 
 .body {
