--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -27,5 +27,5 @@ mixin footer({main, navigation, copy, subscription: {title, text, placeholder}})
     section.footer__line
       .wrapper
         .footer__copy
-          p= copy
+          p.footer__paragraph= copy
           +socials()
