#2 bug fix responsive in form-elements page

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -8,7 +8,7 @@ doctype html
 html
   head
     title Card Kit
-  body.body--kit
+  body.wrapper.wrapper--kit
     img.cards__logo(src="../img/logo.svg", alt="logo")
     .cards
       .cards__column
