--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -3,7 +3,7 @@
 
 .form-elements {
   margin: 143px auto;
-  max-width: 85%;
+  //max-width: 85%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px 1fr));
   grid-template-rows: 1fr 1fr;
@@ -11,11 +11,11 @@
   justify-items: center;
   gap: 120px;
 
-  @media (min-width: $small-size) {
+  @media (min-width: 872px) {
     grid-template-areas: 'left right' 'mid bot';
   }
 
-  @media (min-width: $middle-size) {
+  @media (min-width: 1260px) {
     grid-template-areas: 'left mid right' 'left bot bot';
   }
 
