#14 remove block margin in cards class

--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,8 +1,7 @@
 @import '../../scss/colors.scss';
 
 .cards {
-  max-width: 86%;
-  margin: 150px auto;
+  padding: 150px 0;
   display: flex;
   justify-items: center;
   align-items: flex-start;
