--- a/src/blocks/color-types/color-types.scss
+++ b/src/blocks/color-types/color-types.scss
@@ -1,5 +1,5 @@
 @import '../../scss/sizes.scss';
-@import '../../scss//colors.scss';
+@import '../../scss/colors.scss';
 
 .color-types {
   display: flex;
