--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors.scss';
 
 .headers-footers {
-  margin: 150px auto;
+  padding-top: 150px;
 
   &__item {
     position: relative;
