--- a/src/blocks/color-types/color-types.scss
+++ b/src/blocks/color-types/color-types.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-items: center;
-  margin: 144px auto;
+  padding: 144px 0 0 0;
 
   @media (min-width: $small-size) {
     flex-direction: row;
