--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors.scss';
 
 .cards {
-  padding: 150px 0;
+  padding: 150px 0 0 0;
   display: flex;
   justify-items: center;
   align-items: flex-start;
