--- a/src/blocks/card-canvas/card-canvas.scss
+++ b/src/blocks/card-canvas/card-canvas.scss
@@ -2,7 +2,7 @@
 
 .card-canvas {
   display: block;
-  width: 100%;
+  width: 380px;
   padding: 40px 30px 30px;
   background-color: $white;
   border-radius: 4px;
