--- a/src/pages/colors-type/color-types.scss
+++ b/src/pages/colors-type/color-types.scss
@@ -13,6 +13,12 @@
     max-width: 1160px;
   }
 
+  &__logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+  }
+
   &__pallete {
     margin: 0 auto;
 
