--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -1,6 +1,7 @@
 include ../../blocks/header/header
 include ../../blocks/footer/footer
 include ../../blocks/light-footer/light-footer
+include ../../blocks/kit-logo/kit-logo
 
 doctype html
 html
@@ -42,8 +43,9 @@ html
         link: "/mock-address",
       }];
     
-    img.logo(src="../img/logo.svg", alt="logo")
     .headers-footers
+      .headers-footers__logo
+        +kit-logo()
       .headers-footers__item.headers-footers__item--up
         +header({
           isLogged: false, 
