--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -15,8 +15,9 @@ block content
     "../img/hero-galery/image-2.png",
     "../img/hero-galery/image-3.png"
   ])
-  .wrapper
-    .room-details
+  
+  .room-details
+    .room-details__grid
       .room-details__info
         .room-details__room-item
           h2.room-details__title Сведения о номере
