--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -10,8 +10,8 @@ block title
   title Search Room
 
 block content
-  .wrapper
-    .search-room
+  .search-room
+    .search-room__grid
       sidebar.search-room__sidebar
         form.search-room-form(action="/mock-address", method="post")
           .search-room__sidebar-item
