--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -2,15 +2,22 @@
 @import '../../scss//colors.scss';
 
 .room-details {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 70px;
-  row-gap: 30px;
-  padding-top: 78px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 
-  @media screen and (max-width: 1248px) {
-    grid-template-columns: 1fr;
+  &__grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 70px;
+    row-gap: 30px;
+    padding-top: 78px;
+
+    @media screen and (max-width: 1248px) {
+      grid-template-columns: 1fr;
+    }
   }
+  
 
   &__info {
     display: grid;
