--- a/src/pages/colors-type/colors-and-fonts.pug
+++ b/src/pages/colors-type/colors-and-fonts.pug
@@ -8,8 +8,8 @@ html
     title Colors & Type
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
-    .wrapper
-      .color-types
+    .color-types
+      .color-types__wrapper
         .color-types__logo
           +kit-logo()
         .color-types__pallete
@@ -26,5 +26,3 @@ html
           +type({title: "H2", text: "Next one is the item title inside <br> widgets", size: "medium"})
           +type({title: "H3", text: "This is a label or CTA text", size: "small"})
           +type({title: "Body", text: "This is the body text which is used for most of the design,<br>like paragraphs, lists, etc."})
-          
-          
