--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -20,8 +20,8 @@ html
   head
     title Form Elements
   body
-    .wrapper
-      .form-elements
+    .form-elements
+      .form-elements__wrapper
         .form-elements__logo
           +kit-logo()
         .form-elements__left 
