--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,13 +1,19 @@
 @import '../../scss/colors.scss';
 
 .cards {
-  padding: 150px 0 0 0;
-  display: flex;
-  justify-items: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 
+  &__wrapper {
+    padding: 150px 0 0 0;
+    display: flex;
+    justify-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
   &__column {
     margin: 0 10px;
   }
