#11 added rounded-button mixin

--- a/src/blocks/card-footer/card-footer.pug
+++ b/src/blocks/card-footer/card-footer.pug
@@ -1,5 +1,7 @@
+include ../rounded-button/rounded-button
+
 mixin card-footer(text, buttonText)
   .card-footer
     .card-footer__left= text
     .card-footer__right
-    button.rounded-button.rounded-button--large= buttonText
+    +rounded-button({text: buttonText, isLarge: true})
