--- a/src/blocks/light-footer/light-footer.pug
+++ b/src/blocks/light-footer/light-footer.pug
@@ -1,8 +1,9 @@
 include ../socials/socials
+include ../site-logo/site-logo
 
 mixin light-footer()
   footer.light-footer
-    .site-logo
+    +site-logo()
     .light-footer__content
       | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
       | eget nullam pellentesque aliquam curabitur cociis.
