--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -6,22 +6,21 @@ include ../long-button/long-button
 
 mixin booking-card()
   .booking-card
-    .card-canvas
-      form.booking-card-form(action="/mock-address", method="post")
-        .booking-card__header
-          +apartment-info({number: 888, lux: true, big: true})
-          +price("9 990")
-        .booking-card__item.booking-card__item--up
-          +range-dates({
-            inLabel: "Въезд",
-            outLabel: "Выезд",
-          })
-          .calendar
-            input(type="text")
-        .booking-card__item.booking-card__item--middle
-          h3.card-canvas__subtitle Гости
-          input.js-dropdown-booking
-        .booking-card__item 
-          +invoice()
-        .booking-card__item--last 
-          +long-button("Забронировать")
+    form.booking-card-form(action="/mock-address", method="post")
+      .booking-card__header
+        +apartment-info({number: 888, lux: true, big: true})
+        +price("9 990")
+      .booking-card__item.booking-card__item--up
+        +range-dates({
+          inLabel: "Въезд",
+          outLabel: "Выезд",
+        })
+        .calendar
+          input(type="text")
+      .booking-card__item.booking-card__item--middle
+        h3.booking-card__subtitle Гости
+        input.js-dropdown-booking
+      .booking-card__item 
+        +invoice()
+      .booking-card__item--last 
+        +long-button("Забронировать")
