--- a/src/blocks/find-apartments-card/find-apartments-card.pug
+++ b/src/blocks/find-apartments-card/find-apartments-card.pug
@@ -14,7 +14,7 @@ mixin apartments()
           .calendar
             input(type="text")
         .find-apartments-card__item
-          h3.card-canvas__subtitle Гости
+          h3.find-apartments-card__subtitle Гости
           input.js-dropdown-find-apartments
       .find-apartments-card__button
         +long-button("Подобрать номер")
